--- a/app.json
+++ b/app.json
@@ -1,12 +1,7 @@
 {
-  "name": "Contentful Gatsby Starter",
-  "description": "Gatsby starter for a Contentful project.",
-  "keywords": [
-    "contentful",
-    "gatsby",
-    "static",
-    "ssg"
-  ],
+  "name": "Tadeáš Fořt - Portfolio",
+  "description": "Tadeáš Fořt - Portfolio",
+  "keywords": ["contentful", "gatsby", "static", "ssg"],
   "repository": "https://github.com/contentful-userland/gatsby-contentful-starter",
   "success_url": "/",
   "buildpacks": [
