--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
   incoming-hooks = ["Contentful"]
 
 [template.environment]
-  CONTENTFUL_SPACE_ID = ""
-  CONTENTFUL_ACCESS_TOKEN = ""
-  CONTENTFUL_PREVIEW_ACCESS_TOKEN = ""
+  CONTENTFUL_SPACE_ID = "j91kd33adokz"
+  CONTENTFUL_ACCESS_TOKEN = "CFPAT-OSAFmyR1nuVl20x2kt8AE0TAArFgPsPW2xkgZi7mJD4"
+  CONTENTFUL_PREVIEW_ACCESS_TOKEN = "OrzIXJV2dzI4O2UH-us_G4fpbz0WOb8rmSHigZd3gNI"
