--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
   },
   "dependencies": {
     "@contentful/rich-text-plain-text-renderer": "^15.12.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.1",
+    "emailjs-com": "^3.2.0",
     "gatsby": "^5.5.0",
+    "gatsby-plugin-google-gtag": "^5.11.0",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-react-helmet": "^6.5.0",
     "gatsby-plugin-sharp": "^5.5.0",
+    "gatsby-plugin-sitemap": "^6.11.0",
+    "gatsby-remark-images-contentful": "^6.11.0",
     "gatsby-source-contentful": "^8.5.0",
+    "gatsby-transformer-remark": "^6.11.0",
     "gatsby-transformer-sharp": "^5.5.0",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-masonry-css": "^1.0.16",
+    "react-responsive-carousel": "^3.2.23",
     "reading-time": "^2.0.0-1"
   },
   "devDependencies": {
