--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@contentful/rich-text-plain-text-renderer": "^15.12.1",
+    "@contentful/rich-text-types": "^16.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.1",
+    "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "gatsby": "^5.5.0",
     "gatsby-plugin-google-gtag": "^5.11.0",
