--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.1",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "gatsby": "^5.5.0",
